[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Options.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Font/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 1 )

[node name="Options" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.5
margin_right = 256.5

[node name="TitleRow" type="VBoxContainer" parent="MarginContainer"]
margin_right = 513.0
margin_bottom = 600.0

[node name="Title" type="Label" parent="MarginContainer/TitleRow"]
margin_right = 513.0
margin_bottom = 78.0
rect_pivot_offset = Vector2( -358, -251 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 6 )
text = "Options"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 513.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="OptionContainer" type="GridContainer" parent="MarginContainer/CenterContainer"]
margin_left = 42.0
margin_top = 175.0
margin_right = 471.0
margin_bottom = 425.0
size_flags_vertical = 3
columns = 3

[node name="Master" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_right = 183.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( -358, -251 )
custom_fonts/font = SubResource( 4 )
text = "Master"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 187.0
margin_right = 323.0
margin_bottom = 58.0

[node name="HMaster" type="HSlider" parent="MarginContainer/CenterContainer/OptionContainer/HBoxContainer"]
margin_right = 136.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 99, 8 )
focus_neighbour_bottom = NodePath("../../HBoxContainer3/HMusic")
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.1

[node name="MasterVolume" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 327.0
margin_top = 9.0
margin_right = 429.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( -1038, -148 )
custom_fonts/font = SubResource( 5 )
text = "100%"
align = 1

[node name="Music" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_top = 62.0
margin_right = 183.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -358, -251 )
custom_fonts/font = SubResource( 4 )
text = "Music"
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 187.0
margin_top = 62.0
margin_right = 323.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( -773.5, 131 )

[node name="HMusic" type="HSlider" parent="MarginContainer/CenterContainer/OptionContainer/HBoxContainer3"]
margin_right = 136.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 99, 8 )
focus_neighbour_top = NodePath("../../HBoxContainer/HMaster")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/HEffects")
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 327.0
margin_top = 71.0
margin_right = 429.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( -1038, -148 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="Effects" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_top = 124.0
margin_right = 183.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 4 )
text = "Effects"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 187.0
margin_top = 124.0
margin_right = 323.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( -773.5, 131 )

[node name="HEffects" type="HSlider" parent="MarginContainer/CenterContainer/OptionContainer/HBoxContainer2"]
margin_right = 136.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 99, 8 )
focus_neighbour_top = NodePath("../../HBoxContainer3/HMusic")
focus_neighbour_bottom = NodePath("../../Back")
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 1.0

[node name="EffectsVolume" type="Label" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 327.0
margin_top = 133.0
margin_right = 429.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( -1038, -148 )
custom_fonts/font = SubResource( 5 )
align = 1

[node name="ColumnPercentage" type="VBoxContainer" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_top = 186.0
margin_right = 183.0
margin_bottom = 250.0

[node name="Back" type="Button" parent="MarginContainer/CenterContainer/OptionContainer"]
margin_left = 187.0
margin_top = 186.0
margin_right = 323.0
margin_bottom = 250.0
focus_neighbour_top = NodePath("../HBoxContainer2/HEffects")
custom_fonts/font = SubResource( 4 )
text = "Back"

[connection signal="focus_entered" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer/HMaster" to="." method="_on_HMaster_focus_entered"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer/HMaster" to="." method="_on_HMaster_value_changed"]
[connection signal="focus_entered" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer3/HMusic" to="." method="_on_HMusic_focus_entered"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer3/HMusic" to="." method="_on_HMusic_value_changed"]
[connection signal="focus_entered" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer2/HEffects" to="." method="_on_HEffects_focus_entered"]
[connection signal="value_changed" from="MarginContainer/CenterContainer/OptionContainer/HBoxContainer2/HEffects" to="." method="_on_HEffects_value_changed"]
[connection signal="focus_entered" from="MarginContainer/CenterContainer/OptionContainer/Back" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="MarginContainer/CenterContainer/OptionContainer/Back" to="." method="_on_BackButton_pressed"]
